--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "clipboard": "^2.0.4",
     "node-sass": "^4.12.0",
+    "noty": "^3.2.0-beta",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
